Limpieza de codigo
Se removieron los eventos autogenerados por NetBeans

--- a/src/View/MenuPrincipal.form
+++ b/src/View/MenuPrincipal.form
@@ -55,11 +55,7 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Group type="102" alignment="1" attributes="0">
-              <EmptySpace max="-2" attributes="0"/>
-              <Component id="windowTabs" max="32767" attributes="0"/>
-              <EmptySpace max="-2" attributes="0"/>
-          </Group>
+          <Component id="windowTabs" alignment="0" max="32767" attributes="0"/>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
@@ -104,7 +100,7 @@
                                   <Component id="frecuenciaEmisoraShow" min="-2" max="-2" attributes="0"/>
                                   <Component id="nombreEmisoraShow" min="-2" max="-2" attributes="0"/>
                               </Group>
-                              <EmptySpace min="0" pref="752" max="32767" attributes="0"/>
+                              <EmptySpace min="0" pref="772" max="32767" attributes="0"/>
                           </Group>
                           <Group type="102" alignment="0" attributes="0">
                               <Group type="103" groupAlignment="0" attributes="0">
@@ -254,9 +250,6 @@
               </Properties>
             </Component>
             <Component class="javax.swing.JTextField" name="nombreEmisoraInput">
-              <Events>
-                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="nombreEmisoraInputActionPerformed"/>
-              </Events>
               <AuxValues>
                 <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
               </AuxValues>
@@ -267,17 +260,11 @@
               </AuxValues>
             </Component>
             <Component class="javax.swing.JTextField" name="urlEmisoraInput">
-              <Events>
-                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="urlEmisoraInputActionPerformed"/>
-              </Events>
               <AuxValues>
                 <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
               </AuxValues>
             </Component>
             <Component class="javax.swing.JTextField" name="direccionFisicaInput">
-              <Events>
-                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="direccionFisicaInputActionPerformed"/>
-              </Events>
               <AuxValues>
                 <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
               </AuxValues>
@@ -348,7 +335,7 @@
                                               </Group>
                                           </Group>
                                       </Group>
-                                      <EmptySpace min="0" pref="112" max="32767" attributes="0"/>
+                                      <EmptySpace min="0" pref="132" max="32767" attributes="0"/>
                                   </Group>
                               </Group>
                               <EmptySpace max="-2" attributes="0"/>
@@ -501,21 +488,12 @@
             <Component class="javax.swing.JSeparator" name="jSeparator2">
             </Component>
             <Component class="javax.swing.JTextField" name="locutorNombreInput">
-              <Events>
-                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="locutorNombreInputActionPerformed"/>
-              </Events>
             </Component>
             <Component class="javax.swing.JTextField" name="locutorIdInput">
             </Component>
             <Component class="javax.swing.JTextField" name="locutorCorreoInput">
-              <Events>
-                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="locutorCorreoInputActionPerformed"/>
-              </Events>
             </Component>
             <Component class="javax.swing.JTextField" name="locutorTelefonoInput">
-              <Events>
-                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="locutorTelefonoInputActionPerformed"/>
-              </Events>
             </Component>
             <Component class="javax.swing.JTextField" name="locutorDireccionInput">
             </Component>
@@ -544,9 +522,6 @@
                   <Connection code="this.locutoresComboBoxModel" type="code"/>
                 </Property>
               </Properties>
-              <Events>
-                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="locutoresActualizarComboActionPerformed"/>
-              </Events>
               <AuxValues>
                 <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
               </AuxValues>
@@ -556,7 +531,6 @@
                 <Property name="text" type="java.lang.String" value="Ver Informaci&#xf3;n"/>
               </Properties>
               <Events>
-                <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="botonVerInfoLocutorMouseClicked"/>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="botonVerInfoLocutorActionPerformed"/>
               </Events>
             </Component>
@@ -627,7 +601,7 @@
                                               <Component id="programaAsignarLocutorLabel" min="-2" max="-2" attributes="0"/>
                                               <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                                           </Group>
-                                          <Component id="jScrollPane2" pref="596" max="32767" attributes="0"/>
+                                          <Component id="jScrollPane2" pref="616" max="32767" attributes="0"/>
                                       </Group>
                                   </Group>
                               </Group>
@@ -773,18 +747,11 @@
               </Properties>
             </Component>
             <Component class="javax.swing.JTextField" name="programaNombreInput">
-              <Events>
-                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="programaNombreInputActionPerformed"/>
-              </Events>
             </Component>
             <Component class="javax.swing.JTextField" name="programaHorarioInput">
-              <Events>
-                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="programaHorarioInputActionPerformed"/>
-              </Events>
             </Component>
             <Component class="javax.swing.JTextField" name="programaDuracionInput">
               <Events>
-                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="programaDuracionInputActionPerformed"/>
                 <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="programaDuracionInputKeyTyped"/>
               </Events>
               <AuxValues>
@@ -807,9 +774,6 @@
                   <StringArray count="0"/>
                 </Property>
               </Properties>
-              <Events>
-                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="programasListaComboActionPerformed"/>
-              </Events>
               <AuxValues>
                 <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
               </AuxValues>
@@ -827,9 +791,6 @@
                   <StringArray count="0"/>
                 </Property>
               </Properties>
-              <Events>
-                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="programasLocutoresComboActionPerformed"/>
-              </Events>
               <AuxValues>
                 <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
               </AuxValues>
@@ -1062,9 +1023,6 @@
               </Properties>
             </Component>
             <Component class="javax.swing.JTextField" name="cancionArchivoNombreInput">
-              <Events>
-                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="cancionArchivoNombreInputActionPerformed"/>
-              </Events>
             </Component>
             <Component class="javax.swing.JLabel" name="cancionArchivoCantanteLabel">
               <Properties>
@@ -1217,7 +1175,7 @@
                                       <EmptySpace max="32767" attributes="0"/>
                                   </Group>
                                   <Group type="102" attributes="0">
-                                      <Component id="jScrollPane5" pref="568" max="32767" attributes="0"/>
+                                      <Component id="jScrollPane5" pref="588" max="32767" attributes="0"/>
                                       <EmptySpace min="-2" pref="59" max="-2" attributes="0"/>
                                   </Group>
                               </Group>
@@ -1311,7 +1269,6 @@
             </Component>
             <Component class="javax.swing.JTextField" name="anioDiscoTextField">
               <Events>
-                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="anioDiscoTextFieldActionPerformed"/>
                 <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="anioDiscoTextFieldKeyTyped"/>
               </Events>
               <AuxValues>
@@ -1357,9 +1314,6 @@
                   <StringArray count="0"/>
                 </Property>
               </Properties>
-              <Events>
-                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="listaDiscoComboBoxActionPerformed"/>
-              </Events>
               <AuxValues>
                 <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
               </AuxValues>
@@ -1443,7 +1397,7 @@
                                       <Component id="cargarCancionesDiscoLabel" alignment="0" min="-2" pref="208" max="-2" attributes="0"/>
                                   </Group>
                               </Group>
-                              <EmptySpace pref="169" max="32767" attributes="0"/>
+                              <EmptySpace pref="189" max="32767" attributes="0"/>
                               <Group type="103" groupAlignment="0" max="-2" attributes="0">
                                   <Component id="seleccionarDiscoLabel" min="-2" max="-2" attributes="0"/>
                                   <Component id="jScrollPane6" max="32767" attributes="0"/>
@@ -1550,15 +1504,11 @@
               </Properties>
             </Component>
             <Component class="javax.swing.JTextField" name="nombreCancionInput">
-              <Events>
-                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="nombreCancionInputActionPerformed"/>
-              </Events>
             </Component>
             <Component class="javax.swing.JTextField" name="generoCancionInput">
             </Component>
             <Component class="javax.swing.JTextField" name="duracionCancionInput">
               <Events>
-                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="duracionCancionInputActionPerformed"/>
                 <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="duracionCancionInputKeyTyped"/>
               </Events>
             </Component>
@@ -1706,10 +1656,10 @@
                       </Group>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="jScrollPane3" pref="625" max="32767" attributes="0"/>
+                          <Component id="jScrollPane3" pref="645" max="32767" attributes="0"/>
                           <Group type="102" attributes="0">
                               <Component id="listaPlaylistsLabel" min="-2" max="-2" attributes="0"/>
-                              <EmptySpace min="0" pref="540" max="32767" attributes="0"/>
+                              <EmptySpace min="0" pref="560" max="32767" attributes="0"/>
                           </Group>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
@@ -1770,9 +1720,6 @@
               </Properties>
             </Component>
             <Component class="javax.swing.JTextField" name="playlistNombreInput">
-              <Events>
-                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="playlistNombreInputActionPerformed"/>
-              </Events>
             </Component>
             <Component class="javax.swing.JButton" name="botonAgregarPlaylist">
               <Properties>
@@ -1892,7 +1839,7 @@
                           <Group type="102" attributes="0">
                               <Component id="cancionPorCantanteInput" min="-2" pref="301" max="-2" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
-                              <Component id="botonConsultarCancionesCantante" pref="208" max="32767" attributes="0"/>
+                              <Component id="botonConsultarCancionesCantante" pref="228" max="32767" attributes="0"/>
                           </Group>
                           <Component id="jSeparator18" max="32767" attributes="0"/>
                           <Group type="102" attributes="0">
@@ -1950,9 +1897,6 @@
               </Properties>
             </Component>
             <Component class="javax.swing.JTextField" name="cancionPorGeneroInput">
-              <Events>
-                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="cancionPorGeneroInputActionPerformed"/>
-              </Events>
             </Component>
             <Container class="javax.swing.JScrollPane" name="jScrollPane7">
               <AuxValues>
@@ -2031,7 +1975,7 @@
                           <Component id="locutoresDeEmisoraLabel" alignment="0" min="-2" max="-2" attributes="0"/>
                           <Component id="jSeparator19" alignment="0" max="32767" attributes="0"/>
                       </Group>
-                      <EmptySpace pref="166" max="32767" attributes="0"/>
+                      <EmptySpace pref="186" max="32767" attributes="0"/>
                       <Group type="103" groupAlignment="0" max="-2" attributes="0">
                           <Component id="programasDeEmisoraLabel" min="-2" max="-2" attributes="0"/>
                           <Component id="jSeparator20" max="32767" attributes="0"/>
@@ -2149,7 +2093,7 @@
                           <Component id="musicPlayerReproducirCombo" alignment="0" max="32767" attributes="0"/>
                           <Component id="botonReproducir" pref="344" max="32767" attributes="0"/>
                       </Group>
-                      <EmptySpace pref="247" max="32767" attributes="0"/>
+                      <EmptySpace pref="267" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -2252,9 +2196,6 @@
                   <Connection code="this.musicPlayerCancionesBox&#xa;" type="code"/>
                 </Property>
               </Properties>
-              <Events>
-                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="musicPlayerReproducirComboActionPerformed"/>
-              </Events>
               <AuxValues>
                 <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
               </AuxValues>
