--- a/src/View/InformacionLocutor.form
+++ b/src/View/InformacionLocutor.form
@@ -10,7 +10,6 @@
   </SyntheticProperties>
   <Events>
     <EventHandler event="windowClosed" listener="java.awt.event.WindowListener" parameters="java.awt.event.WindowEvent" handler="formWindowClosed"/>
-    <EventHandler event="windowClosing" listener="java.awt.event.WindowListener" parameters="java.awt.event.WindowEvent" handler="formWindowClosing"/>
   </Events>
   <AuxValues>
     <AuxValue name="FormSettings_autoResourcing" type="java.lang.Integer" value="0"/>
@@ -35,7 +34,7 @@
                           <Component id="jSeparator1" min="-2" pref="590" max="-2" attributes="0"/>
                           <Component id="informacionLocutorLabel" min="-2" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                      <EmptySpace min="0" pref="92" max="32767" attributes="0"/>
                   </Group>
                   <Group type="102" attributes="0">
                       <Group type="103" groupAlignment="1" attributes="0">
@@ -46,7 +45,7 @@
                           </Group>
                           <Group type="102" attributes="0">
                               <Component id="fechaLocutorLabel" min="-2" pref="64" max="-2" attributes="0"/>
-                              <EmptySpace pref="72" max="32767" attributes="0"/>
+                              <EmptySpace max="32767" attributes="0"/>
                               <Component id="fechaLocutorInput" min="-2" pref="526" max="-2" attributes="0"/>
                           </Group>
                           <Group type="102" attributes="0">
@@ -114,18 +113,12 @@
                   <Component id="sexoLocutorLabel" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="sexoLocutorInput" alignment="3" pref="29" max="32767" attributes="0"/>
               </Group>
-              <Group type="103" groupAlignment="0" attributes="0">
-                  <Group type="102" attributes="0">
-                      <EmptySpace pref="39" max="32767" attributes="0"/>
-                      <Component id="fechaLocutorLabel" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace max="32767" attributes="0"/>
-                  </Group>
-                  <Group type="102" alignment="1" attributes="0">
-                      <EmptySpace pref="21" max="32767" attributes="0"/>
-                      <Component id="fechaLocutorInput" min="-2" pref="27" max="-2" attributes="0"/>
-                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                  </Group>
+              <EmptySpace pref="21" max="32767" attributes="0"/>
+              <Group type="103" groupAlignment="3" attributes="0">
+                  <Component id="fechaLocutorInput" alignment="3" min="-2" pref="27" max="-2" attributes="0"/>
+                  <Component id="fechaLocutorLabel" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
+              <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Component id="botonEliminarLocutor" min="-2" max="-2" attributes="0"/>
                   <Component id="botonActualizarInfo" alignment="0" min="-2" max="-2" attributes="0"/>
@@ -200,9 +193,6 @@
           <Connection code="this.locutor.getNombre()" type="code"/>
         </Property>
       </Properties>
-      <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="nombreLocutorInputActionPerformed"/>
-      </Events>
     </Component>
     <Component class="javax.swing.JTextField" name="correoLocutorInput">
       <Properties>
@@ -210,9 +200,6 @@
           <Connection code="this.locutor.getCorreo()" type="code"/>
         </Property>
       </Properties>
-      <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="correoLocutorInputActionPerformed"/>
-      </Events>
     </Component>
     <Component class="javax.swing.JTextField" name="telefonoLocutorInput">
       <Properties>
@@ -241,9 +228,6 @@
           <Connection code="this.locutor.getFecha()" type="code"/>
         </Property>
       </Properties>
-      <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="fechaLocutorInputActionPerformed"/>
-      </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="idLocutorActualLabel">
       <Properties>
